--- a/html5.html
+++ b/html5.html
@@ -141,13 +141,13 @@
 
 <svg width="300" height="200" style="border:1px solid #ccc">
  
-  <circle cx="60" cy="60" r="40" fill="#3498db" stroke="black" stroke-width="2" />
+  <circle cx="60" cy="60" r="40" fill="purple" stroke="black" stroke-width="2" />
 
   
-  <rect x="130" y="30" width="80" height="60" fill="#2ecc71" stroke="#000" stroke-width="2"/>
+  <rect x="130" y="30" width="80" height="60" fill="pink" stroke="#000" stroke-width="2"/>
 
  
-  <text x="50" y="150" font-size="20" fill="#e74c3c">Helló SVG!</text>
+  <text x="50" y="150" font-size="20" fill="orange">Helló SVG!</text>
 </svg>
 
 
