--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
           <li><a href="chartjs.html">ChartJS</a></li>
           <li><a href="ajax.html">AJAX</a></li>
           <li><a href="oojs.html">OOJS</a></li>
+          <li><a href="react.html">React</a></li>
         </ul>
       </nav>
 
