--- a/chartjs.html
+++ b/chartjs.html
@@ -16,7 +16,7 @@
       text-align: center;
     }
     tr:hover {
-      background-color: #eef;
+      background-color: white;
     }
   </style>
 </head>
