--- a/oojs.html
+++ b/oojs.html
@@ -5,20 +5,20 @@
   <title>Állatkert - OOJS</title>
   <style>
     .card {
-      border: 1px solid #333;
+      border: 1px solid gray;
       border-radius: 10px;
       padding: 10px;
       margin: 10px;
       max-width: 200px;
       font-family: sans-serif;
-      background-color: #f4f4f4;
+      background-color: white;
     }
   </style>
 </head>
 <body>
 
-<script>
-  // Alap osztály: Állat
+  <script>
+    // Alap osztály: Állat
   class Animal {
     constructor(name, species) {
       this.name = name;
@@ -62,7 +62,7 @@
     allat.render();
   });
 
-</script>
 
+  </script> 
 </body>
 </html>
