--- a/html5.html
+++ b/html5.html
@@ -139,7 +139,7 @@
 
 <h2>SVG alakzatok</h2>
 
-<svg width="300" height="200" style="border:1px solid #ccc">
+<svg width="300" height="200" style="border:1px solid  white">
  
   <circle cx="60" cy="60" r="40" fill="purple" stroke="black" stroke-width="2" />
 
